Fixed  workspace creation & showing error